# RepoPilot

./: .env.example  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
docs/: api_examples.md  architecture_summary.md  demo_guide.md  interview_script.md  project_brief.md  public_demo_checklist.md  release_checklist.md
docs/learning_notes/: 00_project_skeleton.md  01_repository_scanner.md  02_code_chunker.md  03_keyword_retriever.md  04_context_builder.md  05_planning_layer.md  06_llm_client_abstraction.md  07_llm_backed_planner.md  08_read_only_file_tools.md  09_patch_proposal_layer.md  19_cli_demo.md  (+25 more)
frontend/: streamlit_app.py
tests/: __init__.py  test_agent_preview_api.py  test_apply_validate_api.py  test_cli.py  test_code_chunker.py  test_command_runner.py  test_context_builder.py  test_context_preview_api.py  test_demo_workflow_api.py  test_failure_analysis.py  test_failure_analysis_api.py  test_file_tools.py  test_health.py  test_keyword_retriever.py  test_llm_client.py  test_llm_patch_proposal.py  test_llm_planner.py  test_llm_repair_proposal.py  test_openai_llm_client.py  test_openrouter_llm_client.py  test_patch_applier.py  test_patch_apply_api.py  test_patch_preview_api.py  test_patch_proposal.py  test_planning_layer.py  test_planning_preview_api.py  test_repair_apply_api.py  test_repair_apply_report_api.py  test_repair_approval_api.py  test_repair_workflow.py  test_reporting_api.py  test_repository_scan_api.py  test_repository_scanner.py  test_run_report.py  test_self_correction_orchestrator.py  test_validation_pipeline.py  test_workflow_report_api.py
(+80 files in other folders)
